--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: make
-      run: byte-unixbench/make
+      run: UnixBench/make
     - name: make check
       run: make check
     - name: make distcheck
