--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -13,8 +13,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: change directory
+      run: cd UnixBench
     - name: make
-      run: UnixBench/make
+      run: make
     - name: make check
       run: make check
     - name: make distcheck
